--- a/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
+++ b/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
@@ -58,8 +58,8 @@
     </section>
     <section class="sidebar-footer">
       <section>
-        <a title="Cerrar sesión">
-          <i class="fas fa-sign-out-alt"></i>
+        <a title="Cerrar sesión">Cerrar sesión
+          <i class="fas fa-camera"></i>
         </a>
       </section>
     </section>
