--- a/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
+++ b/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
@@ -58,9 +58,9 @@
     </section>
     <section class="sidebar-footer">
       <section>
-        <a title="Cerrar sesión">Cerrar sesión
+        <button (click)="logout()" class="btn btn-primary"  title="Cerrar sesión">Cerrar sesión
           <i class="fas fa-camera"></i>
-        </a>
+        </button>
       </section>
     </section>
   </nav>
