--- a/todoApp/src/app/web/main/authentication/login/login.component.html
+++ b/todoApp/src/app/web/main/authentication/login/login.component.html
@@ -19,6 +19,7 @@
                 mínimo 6 y máximo 10 caracteres</section>
             </section>
           </div>
+          <span>¿No tienes cuenta? <a [routerLink]="['/auth/register']">Registrate</a></span>
           <button type="submit" class="btn btn-primary float-right">Submit</button>
         </form>
       </div>
