--- a/todoApp/src/app/web/main/authentication/register/register.component.html
+++ b/todoApp/src/app/web/main/authentication/register/register.component.html
@@ -36,6 +36,7 @@
               </div>
             </div>
           </div>
+          <span>¿tienes cuenta? <a [routerLink]="['/auth/login']">Inicia Sesion</a></span>
           <button type="submit" class="btn btn-primary float-right">
             Submit
           </button>
