--- a/todoApp/src/app/web/main/home/index/index.component.scss
+++ b/todoApp/src/app/web/main/home/index/index.component.scss
@@ -60,7 +60,7 @@
     position: fixed;
     bottom: 35px;
     right: 40px;
-    background: linear-gradient(to right, #2196F3, #396afc);
+    background: linear-gradient(to right, #dc3545, #ca1829);
     border: none;
     font-size: 17px;
     color: white !important;
@@ -68,7 +68,7 @@
   }
   
   #btn-t:hover {
-    background: #007bff;
+    background:#ca1829;
     border-bottom-right-radius: 18px;
   }
   
