--- a/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
+++ b/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
@@ -3,33 +3,17 @@
 
         <section class="sidebar-header">
           <a >
-            <span class="text-white">fdfdsf</span>
+            <span class="text-white">To do App</span>
           </a>
           <a class="btn mr-1 mb-1 margin-l-f alice-color" (click)="toggled()"><i class="far fa-window-close"></i></a>
         </section>
         <section class="sidebar-profile">
           <section class="user-pic">
-            <img class="img-responsive img-rounded" src="" alt="User picture">
+            <img class="img-responsive img-rounded mb-2" src="../../../../../assets/photo_2019-12-05_08-57-08.jpg" alt="User picture">
           </section>
           <section class="user-info">
-            <span class="user-name color-g after-slice">54521
+            <span class="user-name color-g after-slice">Miguel Arreaza
             </span>
-            <span class="user-role after-slice">
-              <span>24154545</span>
-            </span>
-            <span class="user-role">dsdsad</span>
-          </section>
-        </section>
-        <section class="sidebar-search">
-          <section>
-            <section class="input-group">
-              <input type="text" class="form-control search-menu bg-blue" placeholder="Buscar ...">
-              <section class="input-group-append bg-blue">
-                <span class="input-group-text">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </span>
-              </section>
-            </section>
           </section>
         </section>
         <section  class="sidebar-menu">
@@ -57,10 +41,13 @@
   
     </section>
     <section class="sidebar-footer">
-      <section>
-        <button (click)="logout()" class="btn btn-primary"  title="Cerrar sesión">Cerrar sesión
-          <i class="fas fa-camera"></i>
-        </button>
+      <section class="row">
+        <section class="col-12">
+          <button (click)="logout()" class="btn float-right mr-1 p-1"  title="Cerrar sesión">
+            <i class="fas fa-sign-out-alt"></i>
+          </button>
+        </section>
+
       </section>
     </section>
   </nav>
