--- a/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
+++ b/todoApp/src/app/web/main/home/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
             <img class="img-responsive img-rounded mb-2" src="../../../../../assets/photo_2019-12-05_08-57-08.jpg" alt="User picture">
           </section>
           <section class="user-info">
-            <span class="user-name color-g after-slice">Miguel Arreaza
+            <span class="user-name color-g after-slice">@{{username}}
             </span>
           </section>
         </section>
